# gh-chk

./: .deepsource.toml  .gitignore  .graphqlrc.yaml  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml  labels.yml
.github/workflows/: build.yml  github-label-sync.yml  release.yml
script/: build.local.sh  build.sh  install.sh
src/: cmd.rs  config.rs  contributions.rs  env_keys.rs  graphql.rs  main.rs  notifications.rs  prs.rs  query.contributions.graphql  query.user.repo.pr.graphql  rest.rs  slug.rs  styling.rs
src/cmd/: contributions.rs  issues.rs  notifications.rs  prs.rs  search.rs  trackassignees.rs  tui.rs  viewer.rs
src/query/: approve.pr.graphql  contributions.graphql  issues.graphql  merge.pr.graphql  pr.body.graphql  prs.graphql  prs.repo.graphql  resource.status.graphql  trackassignees.graphql  viewer.graphql
tests/: cli.rs
tests/data/: dependabot_alert_prs.json  dependabot_alert_prs_empty.json  issues.json  prs.json  prs_paginated.json  prs_requested_reviewers.json
tests/stub/: Dockerfile  README.md  docker-compose.yml  server.py
