[package]
authors = ["yasuyuky <yasuyuki.ymd@gmail.com>"]
edition = "2024"
name = "gh-chk"
version = "0.3.0"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
surf = "2.3.2"
colored = "3.0.0"
toml = "0.9.0"
once_cell = "1.21.3"
read_input = "0.8.6"
nestruct = "0.1.0"
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }
clap = { version = "4.5.41", features = ["derive"] }
serde_yaml = "0.9.34"

[dependencies.async-std]
features = ["attributes"]
version = "1.13.1"
